--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {},
-  "dependencies": {},
+  "scripts": {
+    "lint": "eslint 'packages/**/*.tsx'",
+    "format": "prettier --write 'packages/**/*.tsx'"
+  },
   "devDependencies": {
-    "lerna": "^8.0.1"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "lerna": "^8.0.1",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
   }
 }
