--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,14 +1,10 @@
 {
   "name": "client",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "webpack serve --open"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
@@ -17,8 +13,13 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
