clean up author and description

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "drawing-game",
+  "name": "react-template",
   "version": "0.0.1",
-  "description": "A team based drawing game that combines elements of mad libs and one word story.",
-  "author": "xoxohorses",
+  "description": "A React/Typescript/Node/PostgreSQL/Docker project template",
+  "author": "author",
   "license": "ISC",
   "private": true,
   "workspaces": [
@@ -10,8 +10,7 @@
   ],
   "scripts": {
     "lint": "eslint 'packages/**/*.tsx'",
-    "format": "prettier --write 'packages/**/*.tsx'",
-    "start": "cd packages/client && npm run start"
+    "format": "prettier --write 'packages/**/*.tsx'"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
