--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,5 @@
 {
   "name": "shared",
   "version": "0.0.1",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "scripts": {}
 }
