--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,11 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
+  }
 }
