--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,11 +1,15 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "start": "nodemon src/index.ts"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   }
 }
