--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {},
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": { "esm": true }
 }
