--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   }
