--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,19 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "scripts": {}
+  "type": "module",
+  "scripts": {
+    "start": "nodemon src/index.ts"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2"
+  }
 }
