consolide node_modules exclusion in base tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,5 +35,7 @@
 
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
