--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "packages/*"
   ],
   "scripts": {
+    "client": "cd packages/client && npm run start",
+    "server": "cd packages/server && npm run start",
     "lint": "eslint 'packages/**/*.ts' 'packages/**/*.tsx'",
     "format": "prettier --write 'packages/**/*.ts' 'packages/**/*.tsx'"
   },
