--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "packages/*"
   ],
   "scripts": {
+    "start": "docker compose up",
     "lint": "eslint 'packages/**/*.ts' 'packages/**/*.tsx'",
     "format": "prettier --write 'packages/**/*.ts' 'packages/**/*.tsx'"
   },
