--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.0.1",
   "type": "module",
+  "main": "./index.tsx",
   "scripts": {
     "start": "npx webpack serve --open"
   },
