--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,9 @@
   "name": "server",
   "version": "0.0.1",
   "type": "module",
+  "main": "./index.ts",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
