--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,22 @@ services:
       - ./packages/server:/app/packages/server
       - ./packages/shared:/app/packages/shared
       - ./node_modules:/app/node_modules
+    environment:
+      DB_NAME: test
+      DB_USER: root
+      DB_PASSWORD: password
+      # A host on the docker adapter that allows server to connect with db container
+      # https://stackoverflow.com/questions/33357567/econnrefused-for-postgres-on-nodejs-with-dockers
+      DB_HOST: host.docker.internal
+  db:
+    image: postgres:14-alpine
+    container_name: db
+    restart: always
+    ports:
+      - 5432:5432
+    command: postgres -c max_connections=200
+    volumes:
+      - ./packages/server/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
