--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,17 +2,20 @@
   "name": "server",
   "version": "0.0.1",
   "type": "module",
+  "main": "./index.ts",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@types/pg": "^8.10.9",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   }
