--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
       - ./packages/shared:/app/packages/shared
       - ./node_modules:/app/node_modules
     environment:
-      DB_NAME: test
-      DB_USER: root
+      DB_NAME: demo
+      DB_USER: admin
       DB_PASSWORD: password
       # A host on the docker adapter that allows server to connect with db container
       # https://stackoverflow.com/questions/33357567/econnrefused-for-postgres-on-nodejs-with-dockers
@@ -53,7 +53,7 @@ services:
     volumes:
       - ./packages/server/db/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      POSTGRES_USER: root
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
 
 networks:
