--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
