--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,9 +10,13 @@
   "devDependencies": {
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
