--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,16 +8,16 @@
     "build": "npx webpack --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "babel-loader": "^9.1.3",
+    "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
