--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "scripts": {
     "start": "docker compose up",
     "lint": "eslint 'packages/**/*.ts' 'packages/**/*.tsx'",
-    "format": "prettier --write 'packages/**/*.ts' 'packages/**/*.tsx'"
+    "format": "prettier --write 'packages/**/*.ts' 'packages/**/*.tsx'",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
 }
