--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "docker compose up",
     "lint": "eslint 'packages/**/*.ts' 'packages/**/*.tsx'",
     "format": "prettier --write 'packages/**/*.ts' 'packages/**/*.tsx'",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
